# Common library for demos
add_subdirectory(Lib)

# Demos
add_subdirectory(Ballistic)
add_subdirectory(BigBallistic)
add_subdirectory(Blob)
add_subdirectory(Bridge)
add_subdirectory(Explosion)
add_subdirectory(Fireworks)
add_subdirectory(FlightSim)
add_subdirectory(Fracture)
add_subdirectory(Platform)
add_subdirectory(Ragdoll)
add_subdirectory(SailBoat)